link to comments now correct, spacing issues

--- a/less/social.less
+++ b/less/social.less
@@ -73,7 +73,7 @@ ul.social-share {
                 &.facebook   { background-position: -10px -113px  }
                 &.twitter    { background-position: -78px -113px    }
                 &.linkedin   { background-position: -146px -113px   }                
-                &.email      { background-position: -213px -113px   }
+                &.comments      { background-position: -213px -113px   }
                 &:hover,
                 &:focus {
                     transition: none;
@@ -81,7 +81,7 @@ ul.social-share {
                     &.facebook   { background-position: -10px -165px }
                     &.twitter    { background-position: -78px  -165px    }
                     &.linkedin   { background-position: -146px -165px   }                    
-                    &.email      { background-position: -213px -165px   }
+                    &.comments      { background-position: -213px -165px   }
                 }
             }
         }
